--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = "^0.30.1"
 motor = "^3.5.1"
-pymongo = "^4.8.0"
+pymongo = {extras = ["srv"], version = "^4.8.0"}
 pydantic = "^2.8.2"
 
 
